--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  connectivity_plus: ^6.0.3
+  get_it: ^7.7.0
+  http: ^1.2.2
+  equatable: ^2.0.5
+  drift: ^2.19.1+1
 
 dev_dependencies:
   flutter_test:
