--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^1.2.2
   equatable: ^2.0.5
   drift: ^2.19.1+1
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
