--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   firebase_core: ^3.2.0
   firebase_auth: ^5.1.2
   google_sign_in: ^6.2.1
+  sentry_flutter: ^8.5.0
+  sizer: ^2.0.15
+  device_preview: ^1.2.0
+  sidebarx: ^0.17.1
 
 dev_dependencies:
   flutter_test:
