--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   extended_image: ^8.2.1
   google_fonts: ^6.2.1
   flutter_svg: ^2.0.10+1
+  flutter_form_builder: ^9.3.0
 
 dev_dependencies:
   flutter_test:
