--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_svg: ^2.0.10+1
   flutter_form_builder: ^9.3.0
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
