--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   dartz: ^0.10.1
   shared_preferences: ^2.3.1
   shimmer: ^3.0.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
