--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   shared_preferences: ^2.3.1
   shimmer: ^3.0.0
   intl: ^0.19.0
+  d_info: ^0.2.0
 
 dev_dependencies:
   flutter_test:
