--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   intl: ^0.19.0
   d_info: ^0.2.0
   badges: ^3.1.2
+  auto_height_grid_view: ^1.0.0
+  currency_text_input_formatter: ^2.2.3
 
 dev_dependencies:
   flutter_test:
