--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,18 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
   change_app_package_name: ^1.3.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo_ak_solutions.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/images/logo_ak_solutions.png"
+    background_color: "#FFFFFF"
+    theme_color: "#FFFFFF"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
