Update: change app label

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
          devices. -->
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <application
-        android:label="akib_pos"
+        android:label="AK Solutions"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         
