--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  connectivity_plus: ^6.0.3
+  connectivity_plus: ^6.0.5
   get_it: ^7.7.0
   http: ^1.2.2
   equatable: ^2.0.5
@@ -108,6 +108,7 @@ flutter:
     - assets/images/
     - assets/identity/
     - assets/icons/accounting/
+    - assets/images/accounting/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
