--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   blue_thermal_printer: ^1.2.3
   permission_handler: ^11.3.1
   syncfusion_flutter_datepicker: ^26.2.12
+  flutter_svg_provider: ^1.0.7
 
 dev_dependencies:
   flutter_test:
