--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,8 +1,7 @@
 plugins {
     id "com.android.application"
-    id "kotlin-android"
-    // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
-    id "dev.flutter.flutter-gradle-plugin"
+    id "org.jetbrains.kotlin.android"  // atau "kotlin-android"
+    id "dev.flutter.flutter-gradle-plugin" 
 }
 
 def localProperties = new Properties()
