--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   geolocator: ^13.0.1
   month_year_picker: ^0.4.0+1
   flutter_widget_from_html: ^0.15.2
+  device_information: ^0.0.4
 
 dev_dependencies:
   flutter_test:
