--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,9 @@ dependencies:
   month_year_picker: ^0.4.0+1
   flutter_widget_from_html: ^0.15.2
   device_information: ^0.0.4
+  flutter_image_compress: ^2.3.0
+  image_picker: ^1.1.2
+  mobkit_dashed_border: ^0.0.6
 
 dev_dependencies:
   flutter_test:
@@ -82,6 +85,7 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   change_app_package_name: ^1.3.0
   flutter_launcher_icons: ^0.13.1
+  
 
 flutter_launcher_icons:
   android: "launcher_icon"
