--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   flutter_image_compress: ^2.3.0
   image_picker: ^1.1.2
   mobkit_dashed_border: ^0.0.6
+  photo_view: ^0.15.0
 
 dev_dependencies:
   flutter_test:
