Stockist - API & UI Stockist Page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -120,8 +120,11 @@ flutter:
     - assets/identity/
     - assets/icons/accounting/
     - assets/icons/hrd/
+    - assets/icons/stockist/
     - assets/images/accounting/
     - assets/images/hrd/
+    - assets/images/stockist/
+    
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
