--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   image_picker: ^1.1.2
   mobkit_dashed_border: ^0.0.6
   photo_view: ^0.15.0
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   flutter_test:
