--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,12 +68,13 @@ dependencies:
   geolocator: ^13.0.1
   month_year_picker: ^0.4.0+1
   flutter_widget_from_html: ^0.15.2
-  device_information: ^0.0.4
+  # device_information: ^0.0.4
   flutter_image_compress: ^2.3.0
   image_picker: ^1.1.2
   mobkit_dashed_border: ^0.0.6
   photo_view: ^0.15.0
   fl_chart: ^0.69.0
+  device_info_plus: ^11.0.0
 
 dev_dependencies:
   flutter_test:
