Setting - UI & API (Personal Information & Change Password )

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -126,6 +126,7 @@ flutter:
     - assets/images/accounting/
     - assets/images/hrd/
     - assets/images/stockist/
+    - assets/icons/setting/
     
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
