--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,8 @@ dependencies:
   webview_flutter_android: ^3.16.9
   webview_flutter_wkwebview: ^3.16.0
   url_launcher: ^6.3.1
+  firebase_messaging: ^15.0.4
+  flutter_local_notifications: ^17.2.2
 
 dev_dependencies:
   flutter_test:
