--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   extended_image: ^8.2.1
   google_fonts: ^4.0.4
   flutter_svg: ^2.0.10+1
+  flutter_svg_provider: ^1.0.7
   flutter_form_builder: ^9.3.0
   dropdown_button2: ^2.3.9
   dartz: ^0.10.1
@@ -64,7 +65,6 @@ dependencies:
   blue_thermal_printer: ^1.2.3
   permission_handler: ^11.3.1
   syncfusion_flutter_datepicker: ^27.1.52
-  flutter_svg_provider: ^1.0.7
   geolocator: ^13.0.1
   month_year_picker: ^0.4.0+1
   flutter_widget_from_html: ^0.15.2
@@ -81,6 +81,12 @@ dependencies:
   url_launcher: ^6.3.1
   firebase_messaging: ^15.0.4
   flutter_local_notifications: ^17.2.2
+  # flutter_esc_pos_utils: 1.0.1
+  # esc_pos_bluetooth: ^0.4.1
+  # esc_pos_printer: ^4.1.0
+  flutter_blue_classic: ^0.0.3
+  esc_pos_utils: ^1.1.0
+  image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
@@ -93,7 +99,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
   change_app_package_name: ^1.3.0
-  flutter_launcher_icons: ^0.14.1
+  flutter_launcher_icons: ^0.9.2
   
 
 flutter_launcher_icons:
@@ -111,12 +117,16 @@ flutter_launcher_icons:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
+# dependency_overrides:
+#   image: 3.0.1
 flutter:
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
